# Synapse

./: Makefile  README.md  pyproject.toml
SynapseV0.0.2/examples/: binary.py
SynapseV0.0.2/synapse/: __init__.py  synapse.py
examples/: double.py  scare.py
synapse/: __init__.py  synapse.py
