[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Synapse"
version = "0.0.2"
authors = [
  { name="MariusLeVrai", email="mariuslevrai33720@gmail.com" },
]
description = "A lightweight neural network library in Python for learning and prediction, designed for simplicity and rapid prototyping."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "numpy>=1.20.0",
    "tqdm>=4.60.0",
]

[project.urls]
"Homepage" = "https://github.com/mariuslevraidevrai/Synapse"

[tool.setuptools]
packages = ["synapse"]